# project2

./: AStar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Main.cpp  Main.h  MatrixSearchable.h  MatrixSolution.cpp  MatrixSolution.h  MatrixSolver.cpp  MatrixSolver.h  MyParallelServer.cpp  MyParallelServer.h  MyReverseClientHandler.cpp  MyReverseClientHandler.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Searchable.h  Searcher.h  Server.h  Solver.h  State.h  StringReverse.h  main.cpp  test
